2008-09-28  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/tourneyattrs.py (TourneySponsoredPrizesAccessor):
	Created class.
	(TourneySponsoredPrizesLookup): Created class.
	(TourneyAttrsFactory): Created class.

	* pokernetwork/pokerpackets.py (PacketPokerPlayerStats.__init__):
	Renamed statsDict to attrsDict.
	(PacketPokerSupportedPlayerStats): s/stats/attrs/, changed to Sl

	* pokernetwork/userstats.py
	(UserStatsRankPercentileLookup.getAttrsAsPacket): Wrote method.

2008-09-27  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-userstats.py.in
	(PokerUserStatsTestCase.test01_userStatsAccessorBaseClass):
	Removed test.
	(PokerUserStatsTestCase.test02_factory): Renamed test to
	test01_factory, and adapted to new code.
	(PokerUserStatsTestCase.test03_rankPercentileAccessor): Renamed to
	test02, adapated to new code.
	(PokerUserStatsTestCase.test04_userStatsLookupBaseClass): Removed
	test.
	(PokerUserStatsTestCase.test05_userStatsRankPercentileLookupBaseClass):
	Renamed to test03; Adapted to new code.

	* pokernetwork/userstats.py (UserStatsFactory): Reworked to derive
	from AttrsFactory.
	(UserStatsRankPercentileLookup): Reworked to derive from
	AttrsLookup.
	(UserStatsRankPercentileAccessor): Reworked to derive from
	AttrsAccessor.
	(UserStatsAccessor): Removed old base class.
	(UserStatsLookup): Removed old base class.

	* tests/test-attrpack.py.in
	(PokerAttrsTestCase.test02_factory): Adapted test from UserStats version.
	(PokerAttrsTestCase.test03_attrsLookup): Wrote test.

2008-09-24  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-attrpack.py.in: Created file, copying from
	tests/test-userstats.py.in
	(PokerAttrsTestCase.test01_attrsAccessorBaseClass): Wrote full
	coverage for AttrsAccessor.

	* pokernetwork/attrpack.py (AttrsLookup): Created class by
	modifying UserStatsLookup.

2008-09-23  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/attrpack.py (AttrsFactory): Created class by
	modifying UserStatsFactory.
	(AttrsFactory.__init__): Wrote method.