@@ -1,5 +1,13 @@
 2008-09-28  Bradley M. Kuhn  <bkuhn@ebb.org>
 
+	* pokernetwork/pokertable.py (PokerTable.newPlayerInformation): Fixed
+	to use new kwargs call style for getAttrsAsPacket()
+
+	* pokernetwork/pokeravatar.py (PokerAvatar.getPlayerStats): Fixed
+	to use new kwargs call style for getAttrsAsPacket()
+	(PokerAvatar.join): Fixed to use new kwargs call style for
+	getAttrsAsPacket()
+
 	* pokernetwork/tourneyattrs.py (TourneySponsoredPrizesAccessor):
 	Created class.
 	(TourneySponsoredPrizesLookup): Created class.
